# pHash-compare

./: .gitignore  .gitmodules  CMakeLists.txt  MANUAL.md  README.md  build.sh  build_gentoo.sh  fetch_urls.sh  phash-compare.1  phash-compare.cpp  phash_video_compare.cpp  test_build.sh
cmake/: cmake_uninstall.cmake.in
